# swx

./: .coveragerc  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile.test  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_ai_exports.py
benchmarks/: README.md  real_benchmark.py  runner.py  simulation.py
benchmarks/control_fastapi/app/: main.py
benchmarks/results/: real_benchmark_20260308_202531.json  simulation_report.md  simulation_results.json
docs/: DOCUMENTATION_INDEX.md  FRAMEWORK_GUIDE.md
docs/01-overview/: OVERVIEW.md
docs/02-getting-started/: GETTING_STARTED.md
docs/03-architecture/: ARCHITECTURE.md
docs/04-core-concepts/: ALERTING.md  ASYNC_MODEL.md  AUDIT_LOGS.md  AUTHENTICATION.md  BACKGROUND_JOBS.md  BASE_CLASSES.md  BILLING.md  POLICY_ENGINE.md  RATE_LIMITING.md  RBAC.md  SETTINGS.md  USAGE_EXAMPLES.md  UTILITIES.md
docs/05-security/: SECRETS_MANAGEMENT.md  SECURITY_BEST_PRACTICES.md  SECURITY_HARDENING.md  SECURITY_MODEL.md  TOKEN_SECURITY.md
docs/06-api-usage/: API_REFERENCE.md  API_USAGE.md  ERROR_HANDLING.md  PAGINATION_FILTERING.md
docs/07-extending/: ADDING_ALERT_CHANNELS.md  ADDING_ENTITLEMENTS.md  ADDING_FEATURES.md  ADDING_POLICIES.md  CUSTOM_MODELS.md  EXTENDING_SWX.md  EXTENSION_GUIDE.md  MIGRATION_GUIDE.md
docs/08-operations/: DEPLOYMENT.md  MONITORING.md  OPERATIONS.md  PRODUCTION_CHECKLIST.md  PYPI_PACKAGING.md  SECRETS_MANAGEMENT_OPS.md
docs/09-testing/: ACCEPTANCE_TESTING.md  SEEDING_AND_SIMULATION.md  TESTING_GUIDE.md
docs/10-troubleshooting/: DEBUGGING.md  FAQ.md  TROUBLESHOOTING.md
docs/11-reference/: CHANGELOG.md  GLOSSARY.md  MIGRATION_GUIDE.md
docs/AI_AWARE_LAYER/: ai_aware_layer_design.json  benchmark_framework.json
scripts/: prestart.sh  reset_admin_password.py  seed_settings.py  seed_system.py  validate_state.py
swx_core/: __init__.py  background_task.py  bootstrap.py  main.py  py.typed  router.py  version.py
swx_core/ai_exports/: __init__.py  agent_manifest.py  ai_spec.py  architecture.py  change_planner.py  cli.py  context_bundle.py  contracts.py  graph.py  safe_zones.py
swx_core/auth/: __init__.py
swx_core/auth/admin/: __init__.py  dependencies.py
swx_core/auth/core/: __init__.py  jwt.py
swx_core/auth/user/: __init__.py  dependencies.py
swx_core/cli/: __init__.py  main.py
swx_core/cli/commands/: db.py  doctor.py  framework.py  lint.py  make.py  make_template.py  new.py  resource_templates.py  security_validation.py  test.py
swx_core/config/: __init__.py  discovery.py  settings.py
swx_core/container/: __init__.py  container.py  fastapi_integration.py
swx_core/contracts/: __init__.py  auth.py  billing.py  cache.py  container.py  events.py  jobs.py  rate_limit.py  webhook.py
swx_core/controllers/: __init__.py  audit_log_controller.py  auth_controller.py  base.py  job_controller.py  language_controller.py  permission_controller.py  policy_controller.py  role_controller.py  settings_controller.py  team_controller.py  user_controller.py  user_role_controller.py
swx_core/database/: db.py  db_seed.py  db_setup.py
swx_core/email/: email_service.py
swx_core/events/: __init__.py  dispatcher.py  listener.py
swx_core/events/events/: __init__.py  auth_events.py
swx_core/guards/: __init__.py  api_key_guard.py  base.py  guard_manager.py  jwt_guard.py
swx_core/middleware/: __init__.py  audit_middleware.py  cors_middleware.py  logging_middleware.py  metrics_middleware.py  rate_limit_middleware.py  sentry_middleware.py  session_middleware.py
swx_core/models/: __init__.py  admin_user.py  audit_log.py  billing.py  job.py  language.py  permission.py  policy.py  refresh_token.py  role.py  role_permission.py  system_config.py  team.py  team_member.py  token.py  user.py  user_role.py
swx_core/providers/: __init__.py  auth_provider.py  base.py  billing_provider.py  core_providers.py  database_provider.py  event_provider.py  rate_limit_provider.py
swx_core/rbac/: __init__.py  dependencies.py  helpers.py
swx_core/repositories/: __init__.py  audit_log_repository.py  base.py  job_repository.py  language_repository.py  permission_repository.py  policy_repository.py  role_permission_repository.py  role_repository.py  team_repository.py  token_repository.py  user_repository.py  user_role_repository.py
swx_core/routes/access/: auth_route.py  oauth_route.py
swx_core/routes/admin/: audit_route.py  auth_route.py  billing_feature_route.py  billing_plan_route.py  job_route.py  permission_route.py  policy_route.py  role_route.py  settings_route.py  team_route.py  user_role_route.py  user_route.py
swx_core/routes/user/: user_route.py
swx_core/routes/utils/: health_route.py  language_route.py
swx_core/security/: dependencies.py  password_security.py  refresh_token_service.py  token_blacklist.py
swx_core/services/: __init__.py  alert_engine.py  audit_log_service.py  audit_logger.py  auth_service.py  base.py  job_service.py  language_service.py  permission_service.py  policy_service.py  role_service.py  settings_crud_service.py  settings_helper.py  settings_service.py  team_service.py  user_role_service.py  user_service.py
swx_core/services/billing/: billing_provider_base.py  enforcement.py  entitlement_resolver.py  feature_registry.py  stripe_provider.py  subscription_service.py
swx_core/services/channels/: base.py  email_channel.py  log_channel.py  models.py  slack_channel.py  sms_channel.py
swx_core/services/job/: __init__.py  handlers.py  job_dispatcher.py  job_runner.py
swx_core/services/policy/: __init__.py  actor.py  context.py  dependencies.py  policy_engine.py  policy_registry.py  resource.py
swx_core/template/: __init__.py
swx_core/utils/: __init__.py  cache.py  dependencies.py  errors.py  filters.py  health.py  helper.py  language_helper.py  loader.py  mixins.py  model.py  pagination.py  query.py  rate_limit.py  response.py  testing.py  unit_of_work.py  validators.py  versioning.py
swx_core/webhooks/: __init__.py  stripe_webhook.py
tests/cli/: __init__.py  test_make_commands.py
(+34 files in other folders)
