[project]
name = "swx-core"
version = "2.1.7"
description = "Production-ready FastAPI framework with RBAC, OAuth, JWT, billing, modular architecture, and base class patterns. Create projects with 'swx new', scaffold with 'swx make:resource --base'."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    {name = "SwX Team", email = "layinded@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["fastapi", "framework", "api", "rest", "async", "rbac", "jwt", "oauth"]

dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "gunicorn>=20.1.0,<22.0.0",
    "sqlalchemy>=2.0,<3.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "pydantic>2.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.12.1,<2.0.0",
    "httpx>=0.25.1,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "bcrypt==4.0.1",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "authlib>=1.4.0",
    "itsdangerous>=2.2.0",
    "psutil",
    "pgai[sqlalchemy]>=0.1.0",
    "asyncpg",
    "redis[hiredis]>=5.0.0",
    "celery>=5.3.0",
    "prometheus_client>=0.19.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "httpx>=0.25.1,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "black>=23.12.0,<24.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
    "types-redis<5.0.0",
    "coverage>=7.4.3,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swx_core"]
artifacts = [
    "swx_core/template/**/*",
]
exclude = [
    "swx_core/tests/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.hatch.build.targets.sdist]
include = [
    "swx_core/**/*.py",
    "swx_core/template/**/*",
    "README.md",
    "LICENSE",
    "docs/01-overview/**",
    "docs/02-getting-started/**",
    "docs/03-architecture/**",
    "docs/04-core-concepts/**",
    "docs/05-security/**",
    "docs/06-api-usage/**",
    "docs/07-extending/**",
    "docs/08-operations/**",
    "docs/09-testing/**",
    "docs/10-troubleshooting/**",
    "docs/11-reference/**",
    "docs/DOCUMENTATION_INDEX.md",
    "docs/FRAMEWORK_GUIDE.md",
    "Dockerfile",
    "docker-compose.yml",
    "docker-compose.production.yml",
    "Caddyfile",
    "scripts/*.sh",
    "scripts/*.py",
    ".coveragerc",
    "pytest.ini",
    "Makefile.test",
    ".pre-commit-config.yaml",
]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "**/.git/**",
    "**/.idea/**",
    "**/.vscode/**",
    "**/.pytest_cache/**",
    "**/.mypy_cache/**",
    "**/*.egg-info/**",
    "**/dist/**",
    "**/build/**",
]

[project.scripts]
swx = "swx_core.cli.main:main"

[project.entry-points."swx.plugins"]
# Framework plugins can register here

[project.urls]
Homepage = "https://github.com/layinded/swx"
Documentation = "https://github.com/layinded/swx/docs"
Repository = "https://github.com/layinded/swx"
Issues = "https://github.com/layinded/swx/issues"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "migrations", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["migrations", "alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require database/redis)",
    "feature: Feature tests (end-to-end scenarios)",
    "e2e: End-to-end tests (full stack)",
    "cli: CLI command tests",
    "slow: Slow tests (skip with -m 'not slow')",
    "container: Service container tests",
    "guard: Guard system tests",
    "event: Event bus tests",
    "webhook: Webhook tests",
    "plugin: Plugin system tests",
    "upgrade: Upgrade safety tests",
    "stress: Stress/performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["swx_core"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if name == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 85
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"
title = "SwX Framework Coverage Report"