[project]
name = "swx-core"
version = "2.3.0"
description = "Production-ready FastAPI framework with RBAC, OAuth, JWT, billing, modular architecture, and base class patterns. Create projects with 'swx new', scaffold with 'swx make:resource --base'."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
authors = [
    {name = "SwX Team", email = "layinded@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["fastapi", "framework", "api", "rest", "async", "rbac", "jwt", "oauth"]

dependencies = [
    # Core Web Framework - simplified to avoid dependency resolution issues
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "gunicorn>=21.0.0,<23.0.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "alembic>=1.12.1,<2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    
    # Authentication & Security
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<4.4.0",  # Pinned to avoid passlib incompatibility with bcrypt 5.x
    "pyjwt>=2.8.0,<3.0.0",
    "authlib>=1.3.0,<2.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    
    # Pydantic & Settings
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    
    # HTTP Client
    "httpx>=0.25.0",
    
    # Caching & Messaging
    "redis[hiredis]>=5.0.0",
    "celery>=5.3.0,<6.0.0",
    
    # Utilities
    "tenacity>=8.2.3,<9.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "click>=8.0.0,<9.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    
    # Optional: Stripe (for billing)
    "stripe>=7.0.0,<12.0.0",
    
    # Optional: Sentry (set specific version to avoid conflicts)
    "sentry-sdk>=1.45.0,<2.0.0",
    
    # Optional: Prometheus metrics
    "prometheus-client>=0.19.0",
    
    # Database extensions
    "pgai[sqlalchemy]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "httpx>=0.25.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swx_core"]
artifacts = [
    "swx_core/template/**/*",
    "swx_core/database/languages.json",
]
exclude = [
    "swx_core/tests/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
]

[project.scripts]
swx = "swx_core.cli.main:main"

[project.urls]
Homepage = "https://github.com/layinded/swx"
Documentation = "https://github.com/layinded/swx/docs"
Repository = "https://github.com/layinded/swx"
Issues = "https://github.com/layinded/swx/issues"